--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -658,7 +658,8 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_expDistribution_
 # with input data from the Swiss project GeLuft
 
 bestcost_pm_yld_lifetable_geluft  <- 
-  attribute_yld_lifetable_rr(
+  attribute(
+    health_metric = "from_lifetable_to_yld",
     exp_central = input_data_mortality$exp[2],
     # exp_central = c(8, 9, 10), # Fake data. Deactivate to test exposure distribution.
     prop_pop_exp = 1,
@@ -681,7 +682,7 @@ bestcost_pm_yld_lifetable_geluft  <-
     info = input_data_mortality$pollutant[2],
     min_age = input_data_mortality$min_age[2], # min_age = 20,
     corrected_discount_rate = 0,
-    # duration = 2, # Deactivate to test additional cases
+    duration = 100, # Deactivate to test additional cases
     disability_weight = 1
   )
 
