--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -720,6 +720,22 @@ comparison_singlebhd_rr_delta <-
     info_1 = "PM2.5_mortality_2010",
     info_2 = "PM2.5_mortality_2020")
 
+comparison_singlebhd_rr_delta <-
+  bestcost::compare(
+    comparison_method = "delta",
+    exp_central_1 = 8.85, 
+    exp_central_2 = 6,
+    cutoff = 5,    
+    bhd_central_1 = 25000,
+    bhd_central_2 = 25000,
+    rr_central = 1.118, 
+    rr_lower = 1.060, 
+    rr_upper = 1.179,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    info_1 = "PM2.5_mortality_2010",
+    info_2 = "PM2.5_mortality_2020")
+
 # No study to compare bestcost results
 # Check only if results stay the same overtime despite developments
 check_bestcost(result_list_bestcost = comparison_singlebhd_rr_delta ,
@@ -728,7 +744,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_delta ,
 #PIF
 # Test pif comparison function with fake values
 comparison_singlebhd_rr_pif <-
-  bestcost::compare_health_singlebhd_rr(
+  bestcost::compare(
     comparison_method = "pif",
     exp_central_1 = 8.85, 
     exp_central_2 = 6,
