--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -307,7 +307,7 @@ bestcost_pm_yld_singlebhd  <-
     erf_increment = 10, 
     erf_shape = "log_linear", 
     disability_weight = 0.5,
-    health_metric = "from_prevalence_to_yld")
+    health_metric = "yld_from_prevalence")
 
 # No study to compare bestcost results
 # Check only if results stay the same overtime despite developments
@@ -394,7 +394,7 @@ for(d in c("natural", "total")){
 
 bestcost_pm_deaths_lifetable_airqplus <-
   bestcost::attribute(
-    health_metric = "from_lifetable_to_death",
+    health_metric = "death_from_lifetable",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
@@ -423,7 +423,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_airqplus,
 # Now with input data from the Swiss project GeLuft
 bestcost_pm_deaths_lifetable_geluft <- 
     bestcost::attribute(
-    health_metric = "from_lifetable_to_death",
+    health_metric = "death_from_lifetable",
     exp_central = input_data_mortality$exp[2], # PM2.5=8.85 exp in CH in 2019
     cutoff = input_data_mortality$cutoff[2],   # PM2.5=5,i.e. WHO AQG 2021 
     rr_central = input_data_mortality[2,"rr_central"], 
@@ -445,7 +445,7 @@ bestcost_pm_deaths_lifetable_geluft <-
 
 bestcost_pm_deaths_lifetable_geluft <- 
     bestcost::attribute(
-    health_metric = "from_lifetable_to_death",
+    health_metric = "death_from_lifetable",
     exp_central = input_data_mortality$exp[2], # PM2.5=8.85 exp in CH in 2019
     cutoff = input_data_mortality$cutoff[2],   # PM2.5=5,i.e. WHO AQG 2021 
     rr_central = input_data_mortality[2,"rr_central"], 
@@ -480,7 +480,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_geluft ,
 # Calculate premature deaths using bestcost function
 bestcost_pm_deaths_lifetable_expDistribution <- 
     bestcost::attribute(
-      health_metric = "from_lifetable_to_death",
+      health_metric = "death_from_lifetable",
       exp_central = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[2],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
@@ -520,7 +520,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_geluft ,
 
 bestcost_pm_yll_lifetable_airqplus <-
   bestcost::attribute(
-    health_metric = "from_lifetable_to_yll",
+    health_metric = "yll_from_lifetable",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
@@ -553,7 +553,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus,
 # Now with input data from the Swiss project GeLuft
 bestcost_pm_yll_lifetable_geluft <- 
   bestcost::attribute(
-    health_metric = "from_lifetable_to_yll",
+    health_metric = "yll_from_lifetable",
     exp_central = input_data_mortality$exp[2], #exp CH 2019
     prop_pop_exp = 1,
     cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
@@ -588,7 +588,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_geluft,
 
 bestcost_pm_yll_lifetable_1rr_geluft <- 
     bestcost::attribute(
-      health_metric = "from_lifetable_to_yll",
+      health_metric = "yll_from_lifetable",
       exp_central = input_data_mortality$exp[2], #exp CH 2019
       prop_pop_exp = 1,
       cutoff = input_data_mortality$cutoff[2], 
@@ -622,7 +622,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_1rr_geluft,
 
 bestcost_pm_yll_lifetable_expDistribution_geluft <- 
     bestcost::attribute(
-      health_metric = "from_lifetable_to_yll",
+      health_metric = "yll_from_lifetable",
       exp_central = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
@@ -660,7 +660,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_expDistribution_
 
 bestcost_pm_yld_lifetable_geluft  <- 
   attribute(
-    health_metric = "from_lifetable_to_yld",
+    health_metric = "yld_from_lifetable",
     exp_central = input_data_mortality$exp[2],
     # exp_central = c(8, 9, 10), # Fake data. Deactivate to test exposure distribution.
     prop_pop_exp = 1,
@@ -773,15 +773,6 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_pif ,
 # Test delta comparison function with fake values
 # No PIF option in ar
 
-comparison_singlebhd_ar_delta <-
-  bestcost::compare_health_ar(
-    exp_central_1 = c(57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
-    exp_central_2 = c(50, 55, 60, 65, 75), # Fake values
-    pop_exp_1 = c(387500, 286000, 191800, 72200, 7700), # Values as example provided by NIPH
-    pop_exp_2 = c(387500, 286000, 191800, 72200, 7700), # Fake values
-    erf_c_central = "78.9270-3.1162*c+0.0342*c^2",
-    info_1 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2020),
-    info_2 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2022))
 
 comparison_singlebhd_ar_delta <-
   bestcost::compare(
@@ -810,8 +801,9 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta ,
 # DELTA
 
 comparison_deaths_lifetable_delta <-
-  bestcost::compare_deaths_lifetable_rr(
+  bestcost::compare(
     comparison_method = "delta",
+    health_metric = "death_from_lifetable",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -851,14 +843,15 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_delta ,
 
 # Additionally check that it produce the first scenario produce the same results as above
 check_bestcost(result_list_bestcost = comparison_deaths_lifetable_delta[["detailed"]][["scenario_1"]] ,
-               result_vector_alternative = bestcost_pm_deaths_lifetable_geluft[["total"]]$impact_rounded) 
+               result_vector_alternative = bestcost_pm_deaths_lifetable_geluft[["main"]]$impact_rounded) 
 
 
 # PIF
 
 comparison_deaths_lifetable_pif  <-
-  bestcost::compare_deaths_lifetable_rr(
+  bestcost::compare(
     comparison_method = "pif",
+    health_metric = "death_from_lifetable",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -896,9 +889,9 @@ comparison_deaths_lifetable_pif  <-
 check_bestcost(result_list_bestcost = comparison_deaths_lifetable_pif ,
                result_vector_alternative = c(1943,1023,2847)) # Result on 16 May 2024
 
-# Additionally check that it produce the first scenario produce the same results as above
+# Additionally check that scenario produce the same results as above
 check_bestcost(result_list_bestcost = comparison_deaths_lifetable_pif[["detailed"]][["scenario_1"]],
-               result_vector_alternative = bestcost_pm_deaths_lifetable_geluft[["total"]]$impact_rounded) 
+               result_vector_alternative = bestcost_pm_deaths_lifetable_geluft[["main"]]$impact_rounded) 
 
 ```
 
